micro-java/target/classes/META-INF/jkube/openshift/micro-java-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: micro-config-1
    jkube.io/git-url: https://github.com/eugeneontheedge/DO288-apps
    app.openshift.io/vcs-uri: https://github.com/eugeneontheedge/DO288-apps
    jkube.io/git-commit: f355431fb67e02bf81041c1ddf395770a774c657
    jkube.io/git-branch: micro-config-1
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: micro-java
    provider: jkube
    version: "1.0"
    group: com.redhat.training.openshift.hello
  name: micro-java
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: micro-java
    provider: jkube
    group: com.redhat.training.openshift.hello
