micro-java/target/classes/META-INF/jkube/openshift/micro-java-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: micro-config-1
    jkube.io/git-url: https://github.com/eugeneontheedge/DO288-apps
    app.openshift.io/vcs-uri: https://github.com/eugeneontheedge/DO288-apps
    jkube.io/git-commit: f355431fb67e02bf81041c1ddf395770a774c657
    jkube.io/git-branch: micro-config-1
  labels:
    app: micro-java
    provider: jkube
    version: "1.0"
    group: com.redhat.training.openshift.hello
  name: micro-java
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: micro-java
